tests/fixtures/negative/publisher_used_twice.wrela
// expect: SEM0039: publisher pub is assigned to more than one producer field
module negative.publisher_used_twice

module machine.x86_64.topic_u64
data TopicIdentity { label: StringLiteral }
class U64ReliableTopic { identity: TopicIdentity; fn publisher(self) -> U64ReliablePublisher { return U64ReliablePublisher(topic = self) } }
data U64ReliablePublisher { topic: U64ReliableTopic }

module negative.publisher_used_twice.app
use { TopicIdentity, U64ReliablePublisher, U64ReliableTopic } from machine.x86_64.topic_u64

executor Producer { out: U64ReliablePublisher; start fn run(self) -> never { while true {} } }

image Bad {
    transitions { delegated_hardware -> owned_hardware }
    phase delegated_hardware(hardware: DelegatedHardware) -> OwnedHardware { return hardware.exit_to_owned_hardware() }
    phase owned_hardware(hardware: OwnedHardware) -> never {
        let topic = U64ReliableTopic(identity = TopicIdentity(label = "counter"))
        let pub = topic.publisher()
        let a = Producer(out = pub)
        let b = Producer(out = pub)
        while true {}
    }
}
